Enable geotargeting for all users.
Unlike admins they will only be able to geotarget on the frontpage.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -4763,7 +4763,9 @@ ul.tabmenu.formtab {
 
 .campaign .targeting {
     margin-left: 25px;
+    margin-top: 10px;
 }
+
 .campaign .targeting input{
     width: 95%;
     border-radius: 7px;
