--- a/r2/r2/templates/renderablecampaign.html
+++ b/r2/r2/templates/renderablecampaign.html
@@ -110,8 +110,7 @@
     ${'/r/%s' % thing.campaign.sr_name if thing.campaign.sr_name else _('frontpage')}
   </td>
 
-  <td class="campaign-geotarget"
-      style="${'display:none' if not c.user_is_sponsor else ''}">
+  <td class="campaign-geotarget">
     ${thing.geotarget}
   </td>
 
