PromoteLinkForm: add a link to the FAQ.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -5405,7 +5405,7 @@ div #campaign-field {
 
 .create-promotion .help p { 
     margin: 5px;
-    width: 580px;
+    max-width: 610px;
 }
 
 .create-promotion .help a.help { 
