Campaign Editor: make padding of td the same as th.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -4754,7 +4754,7 @@ ul.tabmenu.formtab {
 .campaign .bid-info.error { color: red; }
 .campaign .buttons { float:right; }
 .campaign td.prefright { 
-    padding: 4px;
+    padding: 8px 4px 4px;
 }
 .campaign #bid, .campaign #impressions {
     text-align: right;
