Allow users to toggle sendreplies state on existing links.

--- a/r2/r2/templates/linkcommentssettings.html
+++ b/r2/r2/templates/linkcommentssettings.html
@@ -22,6 +22,17 @@
 
 <%namespace file="printablebuttons.html" import="ynbutton" />
 
+%if thing.is_author:
+  %if thing.sendreplies:
+    ${ynbutton(_("disable inbox replies"), _("inbox replies disabled"), "sendreplies",
+      hidden_data=dict(id=thing.link._fullname, state=False))}
+  %else:
+    ${ynbutton(_("enable inbox replies"), _("inbox replies enabled"), "sendreplies",
+      hidden_data=dict(id=thing.link._fullname, state=True))}
+  %endif
+  &nbsp;<span class="help-hoverable" title="${_('inbox replies will send you a message when this link receives a new top-level comment')}">(?)</span>
+%endif
+
 %if thing.can_edit:
   %if thing.contest_mode:
     ${ynbutton(_("disable contest mode"), _("contest mode disabled"), "set_contest_mode",
