--- a/r2/r2/templates/wrappeduser.html
+++ b/r2/r2/templates/wrappeduser.html
@@ -43,13 +43,13 @@
       ${flair(thing, enabled=thing.force_show_flair)}
     %endif
     <%
-      classes = [thing.author_cls, 'id-%s' % thing.fullname]
+      classes = [thing.author_cls, 'may-blank', 'id-%s' % thing.fullname]
       if thing.include_flair_selector:
           classes.append('flairselectable')
     %>
     ${plain_link(thing.name + thing.karma, "/user/%s" % thing.name,
                  _class = ' '.join(classes),
-                 _sr_path = False, target='_blank' if c.user.pref_newwindow else target, title=thing.author_title)}
+                 _sr_path = False, target=target, title=thing.author_title)}
     %if thing.flair_position == 'right':
       ${flair(thing, enabled=thing.force_show_flair)}
     %endif
