wiki: Add an emergency admin delete.

--- a/r2/r2/public/static/css/wiki.less
+++ b/r2/r2/public/static/css/wiki.less
@@ -44,6 +44,10 @@
             .revision {
                 .transition(opacity, 500ms);
             }
+            .revision.deleted {
+                opacity: .5;
+                text-decoration: line-through;
+            }
             .revision.hidden {
                 opacity: .5;
             }
