--- a/r2/r2/templates/wikirevision.html
+++ b/r2/r2/templates/wikirevision.html
@@ -31,6 +31,9 @@
     %if thing._hidden:
        hidden
     %endif
+    %if thing.admin_deleted:
+        deleted
+    %endif
     ">
     
         %if thing.show_extended:
@@ -74,6 +77,12 @@
                        post_callback="$.refresh"
                       )
              }
+        </td>
+    %endif
+
+    %if c.user_is_admin:
+        <td>
+            <a href="#" class="revision_delete" data-revision="${thing._id}">delete</a>
         </td>
     %endif
 </tr>
