Add some safety checks to award modification / creation.

--- a/r2/r2/templates/adminawards.html
+++ b/r2/r2/templates/adminawards.html
@@ -91,6 +91,7 @@
       <td>
         <input type="text" name="imgurl" value="${imgurl}" />
         ${error_field("NO_TEXT", "imgurl", "span")}
+        ${error_field("BAD_URL", "imgurl", "span")}
       </td>
     </tr>
   </table>
