Add a notification on comments page when promoted link is geotargeted.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -1573,6 +1573,26 @@ body.with-listing-chooser.explore-page #header .pagename {
     right: 0;
 }
 
+.geotarget-notice {
+    margin: 5px 10px;
+    height: 16px;
+    background-repeat: no-repeat;
+    text-indent: 20px;
+
+    .md p {
+        font-size: smaller;
+        margin: 0;
+    }
+
+    &.city {
+        background-image: url(../map.png); /* SPRITE */
+    }
+
+    &.country {
+        background-image: url(../world.png); /* SPRITE */
+    }
+}
+
 .promote-pixel {
     position: absolute;
     top: -1000px;
