Hide rank numbers on the front page.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -1840,7 +1840,7 @@ a.star { text-decoration: none; color: #ff8b60 }
 
 .rank { overflow: hidden }
 
-.profile-page .link .rank, .single-page .link .rank { display: none; }
+.profile-page .link .rank, .single-page .link .rank, .front-page .link .rank { display: none; }
 
 .link .midcol {font-weight: bold; font-size: small;}
 
