Line up links with and without thumbnails consistently.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -715,7 +715,7 @@ ul.flat-vert {text-align: left;}
 
 .midcol {
     float: left; 
-    margin-right: 4px; 
+    margin-right: 7px;
     margin-left: 7px; 
     background: transparent; 
     overflow: hidden;
@@ -3939,7 +3939,8 @@ form input[type=radio] {margin: 2px .5em 0 0; }
 .thumbnail {
     float: left; 
     font-size: 0;
-    margin: 0 5px;
+    margin: 0;
+    margin-right: 5px;
     margin-bottom: 2px;
     overflow: hidden;
     width: 70px; 
