Minor trending comments link style tweaks.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -8503,5 +8503,10 @@ body.with-listing-chooser {
     .comments {
         color: #888;
         font-weight: bold;
+        white-space: nowrap;
+
+        &:hover {
+            text-decoration: underline;
+        }
     }
 }
