Delete RTL-specific styles.

--- a/r2/r2/templates/base.html
+++ b/r2/r2/templates/base.html
@@ -28,7 +28,7 @@
 %>
 <%namespace file="utils.html" import="js_setup, googleanalytics, classes"/>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="${c.lang}" 
-      xml:lang="${c.lang}" ${c.lang_rtl and unsafe('dir="rtl"') or ''}>
+      xml:lang="${c.lang}">
   <head>
     <title>${self.Title()}</title>
     <meta name="keywords" content="${self.keywords()}" />
