--- a/r2/r2/templates/cnameframe.html
+++ b/r2/r2/templates/cnameframe.html
@@ -26,7 +26,7 @@
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="${c.lang}" 
-      xml:lang="${c.lang}" ${c.lang_rtl and unsafe('dir="rtl"') or ''}>
+      xml:lang="${c.lang}">
   <head>
     <title>${thing.title}</title>
     
