--- a/r2/r2/templates/reddit.html
+++ b/r2/r2/templates/reddit.html
@@ -44,19 +44,9 @@
 </%def>
 
 <%def name="global_stylesheets()">
-  %if c.lang_rtl:
-    <link rel="stylesheet" href="${static("reddit-rtl.css")}"
-          type="text/css" />
-    %if c.site.stylesheet_rtl:
-      <link rel="stylesheet" href="${static(c.site.stylesheet_rtl)}"
-            type="text/css" />
-    %endif
-  %else:
-    ${less_stylesheet("reddit.less")}
-    %if c.site.stylesheet:
-    <link rel="stylesheet" href="${static(c.site.stylesheet)}"
-          type="text/css" >
-    %endif
+  ${less_stylesheet("reddit.less")}
+  %if c.site.stylesheet:
+    <link rel="stylesheet" href="${static(c.site.stylesheet)}" type="text/css" >
   %endif
 
   <!--[if lt IE 7]>
