--- a/r2/r2/templates/promotelinkform.html
+++ b/r2/r2/templates/promotelinkform.html
@@ -384,7 +384,8 @@ ${self.javascript_setup()}
                       value="${format_decimal(5 * thing.min_bid, format='.00', locale=c.locale)}"
                       data-min_bid="${thing.min_bid}"
                       data-base_cpm="${thing.author.cpm_selfserve_pennies}"
-                      data-geotarget_cpm="${thing.author.cpm_selfserve_pennies + g.cpm_selfserve_geotarget.pennies}"/>
+                      data-geotarget_country_cpm="${g.cpm_selfserve_geotarget_country.pennies}"
+                      data-geotarget_metro_cpm="${g.cpm_selfserve_geotarget_metro.pennies}"/>
               <div class="minimum-spend">
                 ${_('%(minimum)s minimum') % dict(minimum=format_currency(thing.min_bid, 'USD', locale=c.locale))}
               </div>
