--- a/r2/r2/templates/goldvertisement.html
+++ b/r2/r2/templates/goldvertisement.html
@@ -39,7 +39,7 @@
       </div>
     </div>
 
-    <a href="/gold?goldtype=autorenew&amp;source=progressbar" target="_blank">${_("help support reddit")}</a>
+    <a href="/gold?goldtype=${thing.default_type}&amp;source=progressbar" target="_blank">${_("help support reddit")}</a>
 
     <div class="gold-bubble hover-bubble help-bubble anchor-top-centered">
       <p><span class="gold-branding">reddit gold</span>&#32;gives you extra features
